---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-while.typ
snapshot_kind: text
---
#{
  while /*(condition)*/ false {
    // something
  }

  while false /*(condition)*/ { }

  while false {
    // something
  }
  while false {
    /*  111
    222   */
  } // aaaa
}
